@@ -3,10 +3,17 @@ package org.example.Frontend;
 import org.example.Exceptions.ASTBuildException;
 import org.example.PKB.API.*;
 
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 public class IASTImplementationFrontend implements IAST {
+    @Override
+    public void removeFakeProcedures() {
+
+    }
+
     @Override
     public TNode createTNode(EntityType et) {
         System.out.println("Creating node type: " + et.name());
@@ -39,6 +46,11 @@ public class IASTImplementationFrontend implements IAST {
     }
 
     @Override
+    public Set<EntityType> getAllTypes(TNode node) {
+        return new HashSet<>();
+    }
+
+    @Override
     public Attr getAttr(TNode node) {
         return null;
     }
@@ -65,7 +77,7 @@ public class IASTImplementationFrontend implements IAST {
 
     @Override
     public List<TNode> getParentedBy(TNode p) {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
@@ -75,7 +87,7 @@ public class IASTImplementationFrontend implements IAST {
 
     @Override
     public List<TNode> getParentedAstraBy(TNode p) {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
@@ -85,7 +97,7 @@ public class IASTImplementationFrontend implements IAST {
 
     @Override
     public List<TNode> getFollowsAstra(TNode n) {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
@@ -95,7 +107,7 @@ public class IASTImplementationFrontend implements IAST {
 
     @Override
     public List<TNode> getFollowedAstraBy(TNode n) {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
@@ -120,6 +132,6 @@ public class IASTImplementationFrontend implements IAST {
 
     @Override
     public Set<TNode> getNodesOfEntityTypes(EntityType et) {
-        return Set.of();
+        return Collections.emptySet();
     }
 }
