@@ -1,12 +1,9 @@
 package org.example.QueryProc;
 
-import org.example.Exceptions.SolutionDoesNotExist;
 import org.example.PKB.API.EntityType;
 import org.example.PKB.API.IAST;
 import org.example.PKB.API.PKB;
 import org.example.PKB.API.TNode;
-import org.example.PKB.Source.ASTImplementations.ASTGetters;
-import org.example.PKB.Source.ASTImplementations.ASTModifies;
 import org.example.QueryProc.model.*;
 import org.example.QueryProc.staticVal.GrammarRules;
 
@@ -16,120 +13,127 @@ import java.util.stream.Collectors;
 
 public class Evaluator {
     private static final IAST AST = PKB.getAST();
-    private final Set<Map<Argument,TNode>> finalResult = new HashSet<>();
-    public Set<TNode> evaluateQuery(QueryTree queryTree) {
-        //Set<Map<Argument,TNode>> finalResult = new HashSet<>();
+    private final Set<Map<Argument, TNode>> finalResult = new LinkedHashSet<>();
+    public Set<Map<Argument,TNode>> evaluateQuery(QueryTree queryTree) {
+        finalResult.clear();
+        for(Argument arg : queryTree.getReturnValues()) {
+            mergeResults(findTNode(arg).stream()
+                    .map(node -> {
+                        Map<Argument, TNode> map = new LinkedHashMap<>();
+                        map.put(arg, node);
+                        return map;})
+                    .collect(Collectors.toSet()));
+        }
+
+        for(Relation relation : queryTree.getRelations()) {
+            if(!evaluateRelation(relation,queryTree.getSynonyms(), queryTree.getReturnValues()) || finalResult.isEmpty()) {
+                return new LinkedHashSet<>();
+            }
+        }
+
+        for( WithStatement statement : queryTree.getWithStatements()) {
+            if(!evaluateWith(statement)) {
+                return new LinkedHashSet<>();
+            }
+        }
+
+        return finalResult;
+    }
+    public Boolean evaluateBooleanQuery(QueryTree queryTree) {
         finalResult.clear();
 
-        for( Relation relation : queryTree.relations()) {
-            if(!evaluateRelation(relation,queryTree.synonyms())) {
-                return Set.of();
+        for(Relation relation : queryTree.getRelations()) {
+            if(!evaluateRelation(relation,queryTree.getSynonyms(),queryTree.getReturnValues()) || finalResult.isEmpty()) {
+                return false;
             }
         }
 
-        for( WithStatement statement : queryTree.withStatements()) {
-            evaluateWith(statement, finalResult);
+        for( WithStatement statement : queryTree.getWithStatements()) {
+            if(!evaluateWith(statement)) {
+                return false;
+            }
         }
-
-        return finalResult.stream()
-                .map(r->r.get(queryTree.returnValues().get(0)))
-                .collect(Collectors.toSet());
-        //return finalResult;
+        return true;
     }
-    public void evaluateQueryPipeTester(QueryTree queryTree) throws SolutionDoesNotExist {
-        //Set<Map<Argument,TNode>> finalResult = new HashSet<>();
-        finalResult.clear();
+    private boolean evaluateRelation(Relation relation, Set<Argument> synonyms, List<Argument> returnValues) {
+        RelationFunctions functions = GrammarRules.RELATION_FUNCTIONS.get(relation.getName());
 
-        for( Relation relation : queryTree.relations()) {
-            if(!evaluateRelation(relation,queryTree.synonyms())) {
-              throw new SolutionDoesNotExist();
-            }
-        }
-
-        for( WithStatement statement : queryTree.withStatements()) {
-           evaluateWith(statement, finalResult);
-        }
-        List<Argument> returnValues = queryTree.returnValues();
-        Set<String> results = new HashSet<>();
-        if(queryTree.isBoolean()==false)
-        {
-            for (Map<Argument, TNode> mapping : finalResult) {
-                boolean allPresent = returnValues.stream().allMatch(mapping::containsKey);
-                if (!allPresent) {
-                    continue;
-                }
-
-                StringBuilder resultLine = new StringBuilder();
-                for (int i = 0; i < returnValues.size(); i++) {
-                    Argument arg = returnValues.get(i);
-                    TNode node = mapping.get(arg);
-
-                    resultLine.append(AST.getAttr(node).getLine());
-
-                    if (i < returnValues.size() - 1) {
-                        resultLine.append(" ");
-                    }
-                }
-                results.add(resultLine.toString());
-            }
-        }
-        else
-        {
-            System.out.println("True");
-        }
-
-        System.out.println(String.join(",", results));
-
-    }
-    private boolean evaluateRelation(Relation relation,Set<Argument> synonyms) {
-        RelationFunctions functions = GrammarRules.RELATION_FUNCTIONS.get(relation.name());
-
-        Argument arg1 = relation.arg1();
-        Argument arg2 = relation.arg2();
+        Argument arg1 = relation.getArg1();
+        Argument arg2 = relation.getArg2();
         boolean isArg1Synonym = synonyms.contains(arg1);
         boolean isArg2Synonym = synonyms.contains(arg2);
 
-        Set<Map<Argument,TNode>> result = new HashSet<>();
+        Set<Map<Argument,TNode>> result = new LinkedHashSet<>();
         if(isArg1Synonym && isArg2Synonym) {
             for(TNode node : findTNode(arg1) ) {
-                functions.byFunction().apply(node).stream()
-                        .filter(n -> arg2.type().allows(AST.getType(n)))
-                        .map(n -> new HashMap<>(Map.of(arg1, node, arg2, n)))
+                functions.getByFunction().apply(node).stream()
+                        .filter(n -> arg2.getType().allows(AST.getAllTypes(n)))
+                        .map(n -> {
+                            Map<Argument, TNode> map = new LinkedHashMap<>();
+                            map.put(arg1, node);
+                            map.put(arg2, n);
+                            return map;
+                        })
                         .forEach(result::add);
             }
+            //System.out.println("cos");
+            if(result.isEmpty()) return false;
         }
         else if(isArg1Synonym) {
             for(TNode node : findTNode(arg2)) {
-                functions.function().apply(node).stream()
-                        .filter(n->arg1.type().allows(AST.getType(n)))
-                        .map(n->new HashMap<>(Map.of(arg1,n)))
+                functions.getFunction().apply(node).stream() //todo : tutaj -Adrian 26.05.2025 modifies debug
+                        .filter(n->arg1.getType().allows(AST.getAllTypes(n)))
+                        .map(n -> {
+                            Map<Argument, TNode> map = new LinkedHashMap<>();
+                            map.put(arg1, n);
+                            return map;
+                        })
                         .forEach(result::add);
             }
+            if(result.isEmpty()) return false;
         }
         else if(isArg2Synonym) {
             for(TNode node : findTNode(arg1)) {
-                functions.byFunction().apply(node).stream()
-                        .filter(n->arg2.type().allows(AST.getType(n)))
-                        .map(n->new HashMap<>(Map.of(arg2,n)))
+                functions.getByFunction().apply(node).stream()
+                        .filter(n->arg2.getType().allows(AST.getAllTypes(n)))
+                        .map(n -> {
+                            Map<Argument, TNode> map = new LinkedHashMap<>();
+                            map.put(arg2, n);
+                            return map;
+                        })
                         .forEach(result::add);
             }
+            if(result.isEmpty()) return false;
         }
         else {
-            if(!doesSolutionExist(arg1,arg2,functions.isFunction())) {
+            if(!doesSolutionExist(arg1,arg2,functions.getIsFunction())) {
                 return false;
             }
-            if(arg1.name().equals("_") && arg2.name().equals("_") && finalResult.isEmpty()) {
-                Argument key = synonyms.iterator().next();
-                AST.getNodesOfEntityTypes(key.type()).stream()
-                        .map(n->new HashMap<>(Map.of(key,n)))
-                        .forEach(result::add);
-            }
+//            for(Argument arg : returnValues) {
+//                mergeResults(findTNode(arg).stream()
+//                        .map(node -> {
+//                            Map<Argument, TNode> map = new LinkedHashMap<>();
+//                            map.put(arg, node);
+//                            return map;})
+//                        .collect(Collectors.toSet()));
+//            }
+//            if(arg1.getName().equals("_") && arg2.getName().equals("_") && finalResult.isEmpty()) {
+//                Argument key = synonyms.iterator().next();
+//                AST.getNodesOfEntityTypes(key.getType()).stream()
+//                        .map(node -> {
+//                            Map<Argument, TNode> map = new HashMap<>();
+//                            map.put(key, node);
+//                            return map;
+//                        })
+//                        .forEach(result::add);
+//            }
         }
         mergeResults(result);
         //print(resultMap);
         return true;
     }
     private void mergeResults(Set<Map<Argument, TNode>> newNodes) {
+
         if(finalResult.size() == 0 || newNodes.isEmpty()) {
             finalResult.addAll(newNodes);
             return;
@@ -138,37 +142,92 @@ public class Evaluator {
         Set<Argument> newKeys = newNodes.iterator().next().keySet();
         Set<Argument> resultKeys = finalResult.iterator().next().keySet();
 
+        Set<Argument> disjointKeys = new HashSet<>();
+        for(Argument key : newKeys) {
+            if(!resultKeys.contains(key)) {
+                disjointKeys.add(key);
+            }
+        }
+
+        Set<Argument> commonKeys = new HashSet<>();
+        for(Argument key : newKeys) {
+            if(resultKeys.contains(key)) {
+                commonKeys.add(key);
+            }
+        }
+
         if(resultKeys.containsAll(newKeys)) {
             finalResult.removeIf(row -> newNodes.stream()
                     .noneMatch(newRow -> newKeys.stream()
-                            .allMatch(key -> newRow.get(key) == row.get(key))
+                            .allMatch(key -> newRow.get(key).equals(row.get(key)))
             ));
+//            Set<Map<Argument, TNode>> toDelete = new LinkedHashSet<>();
+//            for(Map<Argument,TNode> row : finalResult) {
+//                boolean delete = true;
+//                for(Map<Argument,TNode> newRow : newNodes) {
+//                    boolean match = true;
+//                    for(Argument key : resultKeys) {
+//                        if(row.get(key).equals(newRow.get(key))) {
+//                            match = false;
+//                        }
+//                    }
+//                    if(match)  {
+//                        delete = false;
+//                    }
+//                }
+//                if(delete) {
+//                    toDelete.add(row);
+//                }
+//            }
+//            toDelete.forEach(finalResult::remove);
         }
-        else if(!Collections.disjoint(resultKeys, newKeys)) {
-            Set<Map<Argument, TNode>> toDelete = new HashSet<>();
-            for (Map<Argument, TNode> row : finalResult) {
+        else if(!disjointKeys.isEmpty()) {
+            Set<Map<Argument, TNode>> result = new LinkedHashSet<>();
+            int sum = 0;
 
+            for (Map<Argument, TNode> row : finalResult) {
+                Set<Map<Argument, TNode>> goodRows = new LinkedHashSet<>();
                 for (Map<Argument, TNode> next : newNodes) {
-                    if (newKeys.stream().anyMatch(key -> next.get(key) == row.get(key))) {
-                        row.putAll(next);
-                    } else {
-                        toDelete.add(row);
+                    boolean match = true;
+                    for(Argument key : commonKeys) {
+                        if(!row.get(key).equals(next.get(key))) {
+                            match = false;
+                            break;
+                        }
+                    }
+                    if(match) {
+                        goodRows.add(next);
                     }
                 }
+                sum += goodRows.size();
+                if(!goodRows.isEmpty()) {
+                    for(Map<Argument, TNode> next : goodRows) {
+                        Map<Argument, TNode> tmp = new HashMap<>();
+                        for(Argument key : resultKeys) {
+                            tmp.put(key,row.get(key));
+                        }
+                        for(Argument key : disjointKeys) {
+                            tmp.put(key,next.get(key));
+                        }
+                        result.add(tmp);
+                    }
+
+                }
             }
-            toDelete.forEach(finalResult::remove);
+            finalResult.clear();
+            finalResult.addAll(result);
         }
         else {
-            Set<Map<Argument, TNode>> newRows = new HashSet<>();
+            Set<Map<Argument, TNode>> newRows = new LinkedHashSet<>();
             for (Map<Argument, TNode> row : finalResult) {
                 Iterator<Map<Argument, TNode>> iterator = newNodes.iterator();
                 if (!iterator.hasNext()) continue;
 
-                Map<Argument, TNode> first = new HashMap<>(iterator.next());
+                Map<Argument, TNode> first = new LinkedHashMap<>(iterator.next());
                 row.putAll(first);
 
                 while (iterator.hasNext()) {
-                    Map<Argument, TNode> next = new HashMap<>(row);
+                    Map<Argument, TNode> next = new LinkedHashMap<>(row);
                     next.putAll(iterator.next());
                     newRows.add(next);
                 }
@@ -187,32 +246,47 @@ public class Evaluator {
         }
         return false;
     }
-    private void evaluateWith(WithStatement withStatement,  Set<Map<Argument,TNode>> resultMap) {
-        Argument arg1 = withStatement.arg1();
-        Argument arg2 = withStatement.arg2();
+    private Boolean evaluateWith(WithStatement withStatement) {
+        Argument arg1 = withStatement.getArg1();
+        Argument arg2 = withStatement.getArg2();
         Set<TNode> arguments2 = findTNode(arg2);
 
-        if(resultMap.isEmpty()) {
-            arguments2.stream()
-                    .map(node->new HashMap<>(Map.of(arg1, node, arg2, node)))
-                    .forEach(finalResult::add);
-        }
-        else {
-            List<Map<Argument, TNode>> toDelete = resultMap.stream()
-                    .filter(row -> !arguments2.contains(row.get(arg1)))
-                    .toList();
+        if (finalResult.isEmpty() ||
+                !finalResult.iterator().next().containsKey(arg1) ||
+                (!finalResult.iterator().next().containsKey(arg2) &&
+                        arg2.getType() != EntityType.INTEGER &&
+                        arg2.getType() != EntityType.STRING)) {
 
-            toDelete.forEach(resultMap::remove);
+            Set<Map<Argument,TNode>> nodes = arguments2.stream()
+                    .map(node -> {
+                        Map<Argument, TNode> map = new HashMap<>();
+                        map.put(arg1, node);
+                        map.put(arg2, node);
+                        return map;
+                    }).collect(Collectors.toSet());
+
+            if(nodes.isEmpty()) return false;
+
+            mergeResults(nodes);
+        } else {
+            Iterator<Map<Argument, TNode>> iterator = finalResult.iterator();
+            while (iterator.hasNext()) {
+                Map<Argument, TNode> row = iterator.next();
+                if (!arguments2.contains(row.get(arg1))) {
+                    iterator.remove();
+                }
+            }
         }
+        return !finalResult.isEmpty();
     }
     private Set<TNode> findTNode(Argument arg) {
-        if(arg.type().name().equals("INTEGER")) {
-            TNode node = findNodeByProgLine(Integer.parseInt(arg.name()));
-            return node == null ? Set.of() : Set.of(node);
+        if(arg.getType().name().equals("INTEGER")) {
+            TNode node = findNodeByProgLine(Integer.parseInt(arg.getName()));
+            return node == null ? Collections.emptySet() : Collections.singleton(node);
         }
-        else if(arg.type().name().equals("STRING")) {
-            TNode node = findNodeByName(arg.name());
-            return node == null ? Set.of() : Set.of(node);
+        else if(arg.getType().name().equals("STRING")) {
+            TNode node = findNodeByName(arg.getName());
+            return node == null ? Collections.emptySet() : Collections.singleton(node);
         }
         else {
             return finalResult.stream()
@@ -220,7 +294,7 @@ public class Evaluator {
                     .filter(Objects::nonNull)
                     .collect(Collectors.collectingAndThen(
                             Collectors.toSet(),
-                            set -> set.isEmpty() ? AST.getNodesOfEntityTypes(arg.type()) : set
+                            set -> set.isEmpty() ? AST.getNodesOfEntityTypes(arg.getType()) : set
                     ));
         }
     }
@@ -249,27 +323,5 @@ public class Evaluator {
             }
         }
         return null;
-    }
-    private void print(Set<Map<Argument, TNode>> resultMap) {
-        for(Map<Argument, TNode> row : resultMap) {
-            for(Argument key : row.keySet()) {
-                TNode node = row.get(key);
-                String attribute = "";
-                Set<EntityType> stmtTypes = Set.of(EntityType.STMT, EntityType.ASSIGN, EntityType.IF, EntityType.WHILE, EntityType.CALL);
-                if(stmtTypes.contains(AST.getType(node))) {
-                    attribute = AST.getAttr(node).getLine() + "";
-                }
-                else if(AST.getType(node) == EntityType.PROCEDURE) {
-                    attribute = AST.getAttr(node).getProcName();
-                }
-                else if(AST.getType(node) == EntityType.VARIABLE) {
-                    attribute = AST.getAttr(node).getVarName();
-                }
-
-                System.out.print("(" + key + " " + AST.getType(node) + " " + attribute + ") ");
-            }
-            System.out.println();
-        }
-        System.out.println();
     }
 }
